--- a/style.css
+++ b/style.css
@@ -177,14 +177,17 @@ section .title::after{
     margin: auto 0 auto 30px;
 }
 .home .home-content .text-1{
+    color: crimson;
     font-size: 27px;
 }
 .home .home-content .text-2{
+    color:black;
     font-size: 75px;
     font-weight: 600;
     margin-left: -3px;
 }
 .home .home-content .text-3{
+    color:black;
     font-size: 40px;
     margin: 5px 0;
 }
